--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:layout_margin="10dp"
                 android:layout_weight="7"
                 android:background="@drawable/shape"
-                android:hint="搜索或输入网址"
+                android:hint="@string/toolbar_input_hint"
                 android:imeOptions="actionSend"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -38,7 +38,8 @@
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:padding="10dp"
-                android:src="@drawable/scanning" />
+                android:src="@drawable/scanning"
+                android:contentDescription="@string/QRButton_contentDescription"/>
 
             <ImageView
                 android:id="@+id/button_more_list"
@@ -49,11 +50,12 @@
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
                 android:padding="10dp"
-                android:src="@drawable/more" />
+                android:src="@drawable/more"
+                android:contentDescription="@string/button_more_list_contentDescription"/>
 
     </LinearLayout>
 
-    <com.daasuu.ahp.AnimateHorizontalProgressBar
+    <android.support.v4.widget.ContentLoadingProgressBar
         android:layout_width="match_parent"
         android:layout_height="3dip"
         android:layout_marginTop="60dp"
@@ -72,7 +74,7 @@
             <com.tencent.smtt.sdk.WebView
                 android:id="@+id/web_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="100" />
 
     </LinearLayout>
