--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,8 +74,7 @@
             <com.tencent.smtt.sdk.WebView
                 android:id="@+id/web_view"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="100" />
+                android:layout_height="match_parent" />
 
     </LinearLayout>
 
