--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#f2f2f2" />
+    <solid android:color="#ffffff" />
 
     <size android:height="2dp" android:width="1000dp"/>
     <corners android:radius="8dp" />
