--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -17,12 +17,53 @@
             android:id="@+id/toolbar_setting"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="enterAlways|scroll"
             app:navigationIcon="@drawable/ic_exit"
             app:title="设置">
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="8dp"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/ic_anonymous"
+                app:riv_corner_radius="25dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="70dp"
+                android:layout_marginEnd="10dp"
+                android:text="即刻登录，享受云同步"
+                android:gravity="center_vertical"
+                android:textSize="24sp"/>
+
+        </android.support.v7.widget.CardView>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@android:id/list"/>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
