--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/drawer_layout"
     tools:context="com.mzc6838.ybrowser.MainActivity">
 
     <android.support.design.widget.CoordinatorLayout
@@ -70,17 +70,10 @@
             android:layout_marginTop="60dp"
             android:orientation="vertical">
 
-            <!--<android.support.v4.view.Fragment-->
-                <!--android:id="@+id/main_webview_fragment"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:name="com.mzc6838.ybrowser.WebViewFragment"-->
-                <!--tools:layout="@layout/main_webview_fragment" />-->
-
             <FrameLayout
+                android:id="@+id/frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/frame_layout"/>
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
@@ -184,25 +177,62 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <LinearLayout
-        android:layout_width="300dp"
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="260dp"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:background="#f2f2f2"
-        android:layout_gravity="start">
+        android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true">
 
-        <TextView
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="111"/>
+            android:layout_height="48dp">
 
-    </LinearLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/multi_window_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:navigationIcon="@drawable/ic_exit">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="标签页"
+                    android:textColor="#000"
+                    android:textSize="20sp" />
+
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/multi_window_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="48dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_window_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/ic_add" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:background="#f2f2f2"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true">
 
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
