--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,7 +129,7 @@
                     android:background="?android:attr/selectableItemBackground"
                     android:padding="15dp"
                     android:scaleType="centerInside"
-                    android:src="@drawable/back" />
+                    android:src="@drawable/back" android:contentDescription="TODO"/>
 
                 <ImageView
                     android:id="@+id/button_forward"
@@ -188,7 +188,8 @@
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp">
+            android:layout_height="48dp"
+            android:background="#f2f2f2">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/multi_window_toolbar"
@@ -221,40 +222,9 @@
             android:layout_gravity="bottom|end"
             android:layout_marginBottom="20dp"
             android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_add" />
+            android:src="@drawable/ic_add"
+            app:backgroundTint="#c5e1a5"/>
 
     </android.support.design.widget.CoordinatorLayout>
-
-    <LinearLayout
-        android:layout_width="260dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        android:background="#f2f2f2"
-        android:orientation="vertical"
-        android:clickable="true"
-        android:focusable="true">
-
-        <android.support.design.widget.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:tabMode="fixed">
-
-            <android.support.design.widget.TabItem
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="书签" />
-
-            <android.support.design.widget.TabItem
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="历史" />
-
-        </android.support.design.widget.TabLayout>
-
-        <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
