--- a/app/src/main/res/layout/multi_window_item.xml
+++ b/app/src/main/res/layout/multi_window_item.xml
@@ -32,17 +32,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="24sp"
-            android:layout_marginBottom="4dp"
+            android:textSize="18sp"
+            android:layout_marginBottom="2dp"
             android:singleLine="true" />
 
         <TextView
             android:id="@+id/windowUrl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:layout_marginTop="4dp"
-            android:singleLine="true"/>
+            android:textSize="16sp"
+            android:layout_marginTop="2dp"
+            android:singleLine="true"
+            android:textColor="#C0C0C0"/>
     </LinearLayout>
 
     <ImageView
