--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -10,8 +9,23 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/add_bookmark"
+        android:title="添加书签"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/bookmark"
+        android:title="书签"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/history"
+        android:title="历史记录"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/help"
         android:title="帮助"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
 </menu>
