--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -1,5 +1,6 @@
 <vector android:height="24dp" android:viewportHeight="1024.0"
     android:viewportWidth="1024.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M176.7,817.2C168.5,825.6 168.7,839.1 177.2,847.3 185.6,855.5 199.1,855.3 207.3,846.8L826,206.8C834.2,198.4 834,184.9 825.5,176.7 817,168.5 803.5,168.7 795.3,177.2L176.7,817.2Z"/>
-    <path android:fillColor="#FF000000" android:pathData="M795.3,846.8C803.5,855.3 817,855.5 825.5,847.3 834,839.1 834.2,825.6 826,817.2L207.3,177.2C199.1,168.7 185.6,168.5 177.2,176.7 168.7,184.9 168.5,198.4 176.7,206.8L795.3,846.8Z"/>
+    <path android:fillColor="#3688FF" android:pathData="M512,1024C229.7,1024 0,794.3 0,512S229.7,0 512,0s512,229.7 512,512 -229.7,512 -512,512zM512,85.3C276.7,85.3 85.3,276.7 85.3,512S276.7,938.7 512,938.7 938.7,747.3 938.7,512 747.3,85.3 512,85.3z"/>
+    <path android:fillColor="#5F6379" android:pathData="M632.7,675.3c-10.9,0 -21.8,-4.2 -30.2,-12.5L361.1,421.5c-16.7,-16.7 -16.7,-43.7 0,-60.3 16.7,-16.7 43.7,-16.7 60.3,0l241.4,241.4c16.7,16.7 16.7,43.7 0,60.3 -8.3,8.3 -19.2,12.4 -30.1,12.4z"/>
+    <path android:fillColor="#5F6379" android:pathData="M391.3,675.3c-10.9,0 -21.8,-4.2 -30.2,-12.5 -16.7,-16.7 -16.7,-43.7 0,-60.3l241.4,-241.4c16.7,-16.7 43.7,-16.7 60.3,0 16.7,16.7 16.7,43.7 0,60.3L421.5,662.8c-8.4,8.4 -19.3,12.5 -30.2,12.5z"/>
 </vector>
