--- a/app/src/main/res/menu/bookmark_item_menu.xml
+++ b/app/src/main/res/menu/bookmark_item_menu.xml
@@ -4,14 +4,17 @@
     <item
         android:id="@+id/edit_bookmark"
         android:title="编辑"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:icon="@drawable/ic_edit_bookmark"/>
 
     <item
         android:id="@+id/delete_bookmark"
         android:title="删除"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:icon="@drawable/ic_close"/>
     <item
         android:id="@+id/open_in_new_window"
         android:title="在新的标签页中打开"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:icon="@drawable/ic_add_bookmark"/>
 </menu>
