--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -15,15 +15,14 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="48dp">
 
         <android.support.v7.widget.Toolbar
             app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
             app:theme="@style/Widget.AppCompat.ActionBar"
             android:id="@+id/history_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_scrollFlags="enterAlways|scroll"
+            android:layout_height="match_parent"
             app:navigationIcon="@drawable/ic_exit"
             android:background="#f2f2f2"/>
 
@@ -33,6 +32,6 @@
         android:id="@+id/history_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_marginTop="48dp" />
 
 </android.support.design.widget.CoordinatorLayout>
